HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMalformedArgument/Source/Main.uv
//! Rejected source-native test attribute specimen for an unsupported test argument.

[[test(label: "unsupported")]]
public procedure testMalformedArgumentReference() -> bool
|: => @result
{
    return true
}
